# checkpaper

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile.backend  LICENSE  README.md  README_zh.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  frontend-tests.yml  python-tests.yml  release.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  documents.py  health.py  reports.py  validation.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py
backend/app/prompts/templates/: citation_check.txt  data_processing_verify.txt  data_source_verify.txt  figure_table_check.txt  format_check.txt  reference_verify.txt
backend/app/schemas/: __init__.py  document.py  report.py  validation.py
backend/app/services/: __init__.py
backend/app/services/agent/: __init__.py
backend/app/services/document/: __init__.py
backend/app/services/report/: __init__.py
backend/app/services/validation/: __init__.py
backend/mcp_server/: __main__.py  server.py
backend/mcp_server/tools/: __init__.py
backend/tests/: conftest.py  test_api.py  test_document_service.py  test_mcp_tools.py  test_validation_service.py
docs/: API.md  CONTRIBUTING.md  USER_GUIDE.md  changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: documents.md  health.md  index.md  mcp-tools.md  reports.md  validation.md
docs/developer/: architecture.md  configuration.md  contributing.md  testing.md
docs/guide/: deployment.md  features.md  getting-started.md  introduction.md
docs/zh/: changelog.md  index.md
docs/zh/api/: documents.md  health.md  index.md  mcp-tools.md  reports.md  validation.md
docs/zh/developer/: architecture.md  configuration.md  contributing.md  testing.md
docs/zh/guide/: deployment.md  features.md  getting-started.md  introduction.md
examples/: sample_paper.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts  usePolling.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: HistoryPage.tsx  HomePage.tsx  ReportPage.tsx  UploadPage.tsx  ValidationPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: index.ts
tests/: quick_test.py
