[project]
name = "checkpaper"
version = "0.1.0"
description = "AI论文验证智能体项目"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CheckPaper Team", email = "team@checkpaper.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.22",
    "openai>=1.0.0",
    "openai-agents>=0.0.3",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pylatexenc>=2.10",
    "crossref-commons>=0.0.1",
    "semanticscholar>=0.7.0",
    "grobid-client-python>=0.0.5",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "weasyprint>=61.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "bibtexparser>=1.0.0",
    "scholarly>=1.7.0",
    "pymysql>=1.1.0",  # MySQL 驱动
    "cryptography>=42.0.0",  # MySQL 认证需要
    "psutil>=5.9.0",  # 系统监控
    "python-jose[cryptography]>=3.3.0",  # JWT 认证
    "passlib[bcrypt]>=1.7.4",  # 密码哈希
    "mcp>=1.0.0",  # Model Context Protocol
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # FastAPI uses Depends() in function args
    "UP035",  # deprecated typing imports - keep for compatibility
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/app/schemas/*.py" = ["F821"]  # SQLModel Relationship forward references

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend/app --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["app"]

[tool.fastapi]
entrypoint = "backend.app.main:app"
